Generate swagger API documentation for users#show action
